<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent"
		>
	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="Type word"
			android:editable="true"/>

	<EditText
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/editTextInput" android:layout_gravity="center_vertical|left" android:focusable="true"
			android:editable="true" android:singleLine="true"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:gravity="center">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clear"
                android:id="@+id/button_clear" android:layout_gravity="left|center_vertical"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Copy To Buffer"
                android:id="@+id/button_copy" android:layout_gravity="center" android:layout_marginLeft="20dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Past"
                android:onClick="onPastClick"
                android:id="@+id/button_past" android:layout_gravity="center" android:layout_marginLeft="20dp"/>

    </LinearLayout>
	<EditText
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/editTextResult" android:gravity="top|left" android:editable="false"/>
</LinearLayout>

